# yapit

./: .dockerignore  .env.dev  .env.dev.example  .env.local.sops  .env.local.template  .env.prod  .env.prod.example  .env.selfhost.example  .env.sops  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  .ruff.toml  .sops.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.kokoro-cpu.yml  docker-compose.kokoro-gpu.yml  docker-compose.mac.yml  docker-compose.prod.yml  docker-compose.runpod.yml  docker-compose.selfhost.yml  docker-compose.worker.yml  docker-compose.yml  document_processors.ci.json  document_processors.dev.json  document_processors.prod.json  endpoints.dev.json  endpoints.example.json  kokoro_worker.py  pyproject.toml  runpod-endpoints.example.json  tts_processors.ci.json  tts_processors.dev.json  tts_processors.prod.json
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  claude-pr-review.yml  claude.yml  deploy-runpod.yml  deploy.yml  integration-tests.yml  lint.yml  unit-tests.yml
agent/knowledge/: 2025-tts-model-comparison.md  architecture.md  auth.md  ci.md  dependency-updates.md  dev-setup.md  document-processing.md  dokploy-websearch-findings.md  env-config.md  features.md  frontend-css-patterns.md  frontend-performance.md  frontend.md  guest-users.md  infrastructure.md  inworld-tts.md  licensing.md  logging.md  markdown-parser-spec.md  metrics.md  migrations.md  overview.md  pandoc-epub-footnotes-bug.md  runpod.md  secrets-management.md  security-audits.md  security.md  stack-auth-dev-setup.md  stack-auth.md  strategic-context.md  stripe-e2e-testing.md  stripe-integration.md  tts-flow.md  vps-setup.md
agent/tasks/: 2025-12-29-prioritization.md  2026-01-10-workflow-overhaul.md  2026-01-11-knowledge-structure.md  2026-01-11-stripe-coupon-yearly-bug.md  2026-01-12-audio-cache-opus-compression.md  2026-01-12-document-outliner.md  2026-01-12-document-sharing.md  2026-01-12-gemini-processor-integration.md  2026-01-12-tips-page-showcase.md  2026-01-12-websocket-voice-race-condition.md  2026-01-13-monitoring-alerting.md  2026-01-13-playwright-js-rendering.md  2026-01-14-ai-transform-retry-webpages.md  2026-01-14-doclayout-yolo-figure-detection.md  2026-01-14-pricing-restructure.md  2026-01-14-react-compiler-enablement.md  2026-01-15-tts-annotation-syntax-pivot.md  2026-01-15-worker-architecture-rewrite.md  2026-01-15-yolo-service-containerization.md  2026-01-17-onboarding-showcase-launch.md  2026-01-18-detection-worker-pdf-rendering.md  2026-01-18-inworld-temperature-setting.md  2026-01-18-yolo-to-detection-rename.md  2026-01-19-yap-show-tag.md  2026-01-20-credit-pack-implementation.md  2026-01-20-external-gpu-worker-setup.md  2026-01-20-nginx-upstream-keepalive.md  2026-01-21-inworld-tts-1.5-upgrade.md  2026-01-21-markitdown-parallel-extraction-analysis.md  2026-01-23-image-sharding-cache-compression.md  2026-01-23-markxiv-arxiv-integration.md  2026-01-24-design-audit.md  2026-01-26-gemini-batch-mode.md  2026-01-28-ios-mobile-sidebar-ux.md  2026-01-28-smart-scroll-detach.md  2026-02-01-browser-tts-refactor.md  2026-02-01-playback-engine-refactor.md  2026-02-02-media-session-metadata-mobile-controls.md  2026-02-02-postgres-volume-migration.md  2026-02-02-sqlite-cache-concurrency-fix.md  (+162 more)
dashboard/: __init__.py  __main__.py  components.py  data.py  theme.py
dashboard/tabs/: __init__.py  detection.py  documents.py  extraction.py  overflow.py  overview.py  reliability.py  tts.py  usage.py
dev/: init-db.sql
docker/: Dockerfile.defuddle  Dockerfile.markxiv  Dockerfile.smokescreen  Dockerfile.stackauth  metrics-init.sql
docker/defuddle/: Dockerfile  app.js  app.py  package-lock.json  package.json  pyproject.toml  server.js
docker/metrics-migrations/: 001_add_cached_content_token_count.sql  002_add_token_sums_to_aggregates.sql  003_add_processor_slug_duration_to_aggregates.sql
docs/: adding-models.md  architecture.md  mermaid-proposals.md  project-description.md  runpod-deployment.md
experiments/: benchmark_inworld_speaking_rate.py  block-splitter-test-corpus.md  block_splitter_benchmark.py  block_viz_server.py  test_higgs_context_fixed.py
experiments/pymupdf_eval/: .gitignore  corpus.toml  run.py
frontend/: .env.development  .env.example  .env.production  .env.selfhost  .env.selfhost.auth  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.selfhost.conf  package-lock.json  package.json  vite.config.ts
frontend/design-assets/: og-image-template.html
frontend/public/: maintenance.html  manifest.json  pcm-processor.js  robots.txt  sitemap.xml
frontend/src/: .env.development.example  App.tsx  api.ts  api.tsx  auth.ts  index.css  instrument.ts  main.tsx  vite-env.d.ts
gateway/: Dockerfile  __init__.py  auth.py  cache.py  config.py  db.py  domain_models.py  jobs.py  main.py  redis.py  requirements.txt  text_splitter.py  updater.py
gateway/domain/: models.py
gateway/migrations/: env.py
gateway/tests/: conftest.py  test_documents.py  (+1 more)
libs/: kokoro_pipeline.py
notes/: CLAUDE.md  TODO.max.md  notes.md  open-questions.md
scripts/: acces_token.py  analyze_metrics.py  billing_reconciliation.py  block_splitter_benchmark.py  block_viz_server.py  build-images.sh  capture_trailer_frames.py  cf_analytics.py  create_dev_user.py  create_user.py  csv_to_duckdb.py  dashboard.py  dep-scout.sh  deploy.sh  disk-usage.sh  document_storage.py  dokploy-ssh-key-rotate.sh  get_token.sh  guest_users.py  load_test.py  margin_calculator.py  proxy_diagnostics.py  report.sh  seed_models.py  seed_perf_fixtures.py  smoke_test.py  stress_test.py  stress_test_yolo.py  stripe_inspect.py  stripe_setup.py  sync-cf-firewall.sh  sync-secrets-to-dokploy.sh  test_clock_setup.py  trigger-deploy.sh  warm_cache.service  warm_cache.timer
stack_auth/: __main__.py
test/: smoke_test.py
tests/: conftest.py  test_document.py
video/: .gitignore  Makefile  capture_trailer.py  demo-content.md  generate_voice_clips.py  package-lock.json  package.json
workers/: base_worker.py
yapit/: contracts.py
(+401 files in other folders)
