[project]
name = "yapit"
version = "0.1.0"
description = "Yapit TTS platform (contracts, gateway and workers)"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
authors = [
    {name = "Maximilian Wolf", email="max@mwolf.dev"},
]
# TODO
#license = ""
#classifiers = []

# pip install yapit | (worker) contracts
dependencies = ["pydantic~=2.11.3"]

[project.optional-dependencies]

# pip install yapit[gateway] | core application / API
gateway = [
  "fastapi[standard]~=0.115.12",
  "sqlmodel~=0.0.24",
  "redis~=6.0.0",
  "alembic~=1.15.2",
  "asyncpg~=0.30.0",
  "orjson~=3.10.16",
  "pydantic-settings~=2.9.1",
  "google-re2~=1.1.20240702",
  "requests==2.32.3",
  "svix==1.65.0",
  "psycopg2-binary==2.9.10",
]

# for worker Dockerfile
kokoro_cpu = [
  "torch~=2.7.0", # --extra-index-url https://download.pytorch.org/whl/cpu in Dockerfile
  "kokoro~=0.9.4",
  "spacy~=3.8.4",
  "redis~=6.0.0",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" # pre-install the spaCy model so the worker doesn't auto-download # TODO do we need to specify the exactl wheel?
]

kokoro_gpu = [
  "torch~=2.7.0",
  "kokoro~=0.9.4",
  "spacy~=3.8.4",
  "redis~=6.0.0",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

test = [
  "pytest~=8.3.5",
  "pytest-asyncio==1.0.0",
  "requests~=2.32.3",
  "websocket-client~=1.8.0",
  "redis~=6.0.0",
  "aiosqlite==0.21.0",
  "testcontainers==4.10.0"
]

[build-system]
requires = ["setuptools>=70.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yapit*"]

[project.urls]
#Homepage = ""
#Documentation = ""
Repository = "https://github.com/yapit-tts/yapit/"
Issues = "https://github.com/yapit-tts/yapit/issues"
#Changelog = ""

[tool.pyright]
stubPath = "yapit/stubs"

[pytest]
asyncio_mode = "auto"
