[project]
name = "yapit"
version = "0.1.0"
description = "Yapit TTS platform (contracts, gateway and workers)"
readme = "README.md"
requires-python = "==3.12.*"
authors = [
    {name = "Maximilian Wolf", email="max@mwolf.dev"},
]
license = "AGPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# pip install yapit | (worker) contracts
dependencies = ["pydantic~=2.11.3"]

[project.optional-dependencies]

# pip install yapit[gateway] | core application / API
gateway = [
  "fastapi[standard]~=0.115.12",
  "sqlmodel~=0.0.24",
  "redis~=6.0.0",
  "alembic~=1.15.2",
  "asyncpg~=0.30.0",
  "orjson~=3.10.16",
  "pydantic-settings~=2.9.1",
  "google-re2~=1.1.20240702",
  "requests~=2.32.3",
  "svix~=1.65.0",
  "psycopg2-binary~=2.9.10",
  "markitdown[docx,pdf]~=0.1.2",
  "PyMuPDF~=1.26.3",
  "httpx~=0.28.1",  # only needed for LocalProcessor
  "runpod~=1.7.12",  # only needed for RunpodProcessor
  "mistralai~=1.9.2",  # only needed for MistralOCRProcessor
  "markdown-it-py~=3.0",
  "mdit-py-plugins~=0.4",
  "stripe~=12.0",
  "loguru~=0.7.3",
]

test = [
  "pytest~=8.3.5",
  "pytest-asyncio==1.0.0",
  "requests~=2.32.3",
  "redis~=6.0.0",
  "aiosqlite==0.21.0",
  "testcontainers==4.10.0",
  "httpx~=0.28.1",
  "PyMuPDF~=1.26.3",
  "websockets~=15.0",
]

dev = [
  "pre-commit~=4.2.0",
]

[build-system]
requires = ["setuptools>=70.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yapit*"]

[project.urls]
#Homepage = ""
#Documentation = ""
Repository = "https://github.com/yapit-tts/yapit/"
Issues = "https://github.com/yapit-tts/yapit/issues"
#Changelog = ""

[tool.pyright]
stubPath = "yapit/stubs"

[tool.ty.src]
exclude = [
    "yapit/workers/",  # GPU deps (torch, transformers) not installed in dev
]

[tool.ty.environment]
extra-paths = ["yapit/stubs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "runpod: marks tests that require RunPod integration",
    "mistral: marks tests that require Mistral API integration",
    "inworld: marks tests that require Inworld API integration",
]
