[project]
name = "yapit"
version = "0.1.0"
description = "Yapit TTS platform (contracts, gateway and workers)"
readme = "README.md"
requires-python = "==3.12.*"
authors = [
    {name = "Maximilian Wolf", email="max@mwolf.dev"},
]
license = "AGPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
  "pydantic~=2.12.5",
  "fastapi[standard]~=0.128.0",
  "slowapi~=0.1.9",
  "sqlmodel~=0.0.31",
  "redis[hiredis]~=7.1.0",
  "alembic~=1.18.1",
  "asyncpg~=0.31.0",
  "orjson~=3.11.5",
  "pydantic-settings~=2.12.0",
  "requests~=2.32.5",
  "psycopg[binary]~=3.2",
  "markitdown[docx,pdf]~=0.1.4",
  "PyMuPDF~=1.26.7",
  "httpx~=0.28.1",
  "runpod~=1.8.1",
  "markdown-it-py~=4.0.0",
  "mdit-py-plugins~=0.5.0",
  "stripe~=14.2",
  "loguru~=0.7.3",
  "google-genai~=1.59.0",
  "playwright~=1.57",
  "pillow~=12.1",
  "aiosqlite~=0.22.1",
  "aioboto3>=15.5.0",
  "trafilatura>=2.0.0",
]

[project.optional-dependencies]

test = [
  "pytest~=8.3.5",
  "pytest-asyncio==1.0.0",
  "requests~=2.32.5",
  "redis[hiredis]~=7.1.0",
  "aiosqlite~=0.22.1",
  "testcontainers==4.10.0",
  "httpx~=0.28.1",
  "PyMuPDF~=1.26.7",
  "websockets~=15.0",
]

dev = [
  "pre-commit~=4.2.0",
  "tyro>=1.0.5",
]

[build-system]
requires = ["setuptools>=70.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yapit*"]

[project.urls]
#Homepage = ""
#Documentation = ""
Repository = "https://github.com/yapit-tts/yapit/"
Issues = "https://github.com/yapit-tts/yapit/issues"
#Changelog = ""

[tool.pyright]
stubPath = "yapit/stubs"

[tool.ty.src]
exclude = [
    "yapit/workers/",  # GPU deps (torch, transformers) not installed in dev
]

[tool.ty.environment]
extra-paths = ["yapit/stubs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "runpod: marks tests that require RunPod integration",
    "inworld: marks tests that require Inworld API integration",
    "gemini: marks tests that require Google Gemini API integration",
]

[dependency-groups]
dev = [
    "plotly>=6.5.0",
    "streamlit>=1.52.2",
]

